--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "@emotion/styled": "^11.6.0",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.2.5",
+    "@mui/lab": "^5.0.0-alpha.64",
     "@mui/material": "^5.2.7",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.1.0",
+    "react-bootstrap": "^2.1.1",
+    "react-checkbox-tree": "^1.7.2",
+    "react-collapsed": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-popper": "^2.2.5",
     "react-redux": "^7.2.6",
     "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^5.2.0",
